Set up Gradle wrapper
Set up a Gradle wrapper for the project.

Create .gitignore file with ignore rules for the Gradle wrapper.

Update .gitattributes to exlude .gitignore from exports.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 # Export Ignore
 # ------------------------------------------------------------------------------
 .gitattributes                          export-ignore
+.gitignore                              export-ignore
